# xmltodict

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.markdown  README.md  SECURITY.md  distribute_setup.py  ez_setup.py  push_release.sh  pyproject.toml  release-please-config.json  setup.py  tox.ini  xmltodict.py  xmltodict.pyi
.github/: release-drafter.yml
.github/workflows/: commitlint.yml  publish.yml  release-drafter.yml  release-please.yml  test.yml
tests/: test_dicttoxml.py  test_xmltodict.py
xmltodict/: __init__.py  xmltodict.py
